feat: enhance activity heatmap, fix light mode, improve error handling