@@ -3,12 +3,13 @@ package com.linea_desk.rest_linea.Project;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.TestConfiguration;
@@ -35,6 +36,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.linea_desk.rest_linea.User.User;
+import com.linea_desk.rest_linea.common.exceptions.DuplicateResourceException;
+import com.linea_desk.rest_linea.common.exceptions.ResourceNotFoundException;
 import com.linea_desk.rest_linea.common.service.JwtService;
 import com.linea_desk.rest_linea.config.ApplicationConfiguration;
 import com.linea_desk.rest_linea.config.GithubOAuthSuccessHandler;
@@ -54,16 +57,10 @@ import jakarta.servlet.http.HttpServletResponse;
 )
 class ProjectControllersTest {
 
-    @Autowired
-    private MockMvc mockMvc;
-
+    @Autowired private MockMvc mockMvc;
     private final ObjectMapper objectMapper = new ObjectMapper();
-
-    @MockitoBean
-    private ProjectServices projectServices;
-
-    @MockitoBean
-    private JwtService jwtService;
+    @MockitoBean private ProjectServices projectServices;
+    @MockitoBean private JwtService jwtService;
 
     private User testUser;
     private ProjectRequestDto projectRequest;
@@ -72,12 +69,10 @@ class ProjectControllersTest {
     @BeforeEach
     void setUp() {
         testUser = new User("test@example.com", "testuser", "password123");
-
         projectRequest = new ProjectRequestDto();
         projectRequest.setProjectName("My Project");
         projectRequest.setDescription("A test project");
         projectRequest.setGithubLink("https://github.com/test/project");
-
         projectResponse = new ProjectResponseDto();
         projectResponse.setProjectName("My Project");
         projectResponse.setDescription("A test project");
@@ -88,272 +83,168 @@ class ProjectControllersTest {
 
     // ========== POST /api/project ==========
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void createNewProject_Success() throws Exception {
         when(projectServices.createNewProject(any(ProjectRequestDto.class), any(User.class)))
-                .thenReturn(Optional.of(projectResponse));
-
-        mockMvc.perform(post("/api/project")
-                        .with(csrf())
-                        .with(user(testUser))
+                .thenReturn(projectResponse);
+        mockMvc.perform(post("/api/project").with(csrf()).with(user(testUser))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(projectRequest)))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.message").value("Project created successfuly"))
-                .andExpect(jsonPath("$.data.projectName").value("My Project"))
-                .andExpect(jsonPath("$.data.description").value("A test project"));
+                .andExpect(jsonPath("$.message").value("Project created successfully"))
+                .andExpect(jsonPath("$.data.projectName").value("My Project"));
     }
 
-    @Test
-    @WithMockUser
-    void createNewProject_ServiceReturnsEmpty_ReturnsInternalServerError() throws Exception {
+    @Test @WithMockUser
+    void createNewProject_DuplicateName_ReturnsConflict() throws Exception {
         when(projectServices.createNewProject(any(ProjectRequestDto.class), any(User.class)))
-                .thenReturn(Optional.empty());
-
-        mockMvc.perform(post("/api/project")
-                        .with(csrf())
-                        .with(user(testUser))
+                .thenThrow(new DuplicateResourceException("Project", "name", "My Project"));
+        mockMvc.perform(post("/api/project").with(csrf()).with(user(testUser))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(projectRequest)))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Internal Server Error"));
+                .andExpect(status().isConflict())
+                .andExpect(jsonPath("$.success").value(false));
     }
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void createNewProject_ServiceThrowsException_ReturnsInternalServerError() throws Exception {
         when(projectServices.createNewProject(any(ProjectRequestDto.class), any(User.class)))
                 .thenThrow(new RuntimeException("DB error"));
-
-        mockMvc.perform(post("/api/project")
-                        .with(csrf())
-                        .with(user(testUser))
+        mockMvc.perform(post("/api/project").with(csrf()).with(user(testUser))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(projectRequest)))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$.success").value(false));
+                .andExpect(status().isInternalServerError());
     }
 
     // ========== GET /api/project/{id} ==========
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void getProjectById_Success() throws Exception {
         when(projectServices.getProjectById(eq(1L), any(User.class)))
-                .thenReturn(Optional.of(projectResponse));
-
-        mockMvc.perform(get("/api/project/1")
-                        .with(user(testUser)))
+                .thenReturn(projectResponse);
+        mockMvc.perform(get("/api/project/1").with(user(testUser)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.message").value("Project search was a success"))
                 .andExpect(jsonPath("$.data.projectName").value("My Project"));
     }
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void getProjectById_NotFound() throws Exception {
         when(projectServices.getProjectById(eq(999L), any(User.class)))
-                .thenReturn(Optional.empty());
-
-        mockMvc.perform(get("/api/project/999")
-                        .with(user(testUser)))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Project not found"));
+                .thenThrow(new ResourceNotFoundException("Project", 999L));
+        mockMvc.perform(get("/api/project/999").with(user(testUser)))
+                .andExpect(status().isNotFound());
     }
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void getProjectById_ServiceThrowsException_ReturnsInternalServerError() throws Exception {
         when(projectServices.getProjectById(eq(1L), any(User.class)))
                 .thenThrow(new RuntimeException("DB error"));
-
-        mockMvc.perform(get("/api/project/1")
-                        .with(user(testUser)))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$.success").value(false));
+        mockMvc.perform(get("/api/project/1").with(user(testUser)))
+                .andExpect(status().isInternalServerError());
     }
 
     // ========== GET /api/projects ==========
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void getProjectsList_Success() throws Exception {
-        ProjectResponseDto project2 = new ProjectResponseDto();
-        project2.setProjectName("Another Project");
-        project2.setDescription("Second project");
-        project2.setSessions(3);
-        project2.setTasks(Collections.emptyList());
-
-        Collection<ProjectResponseDto> projects = List.of(projectResponse, project2);
-        when(projectServices.getAllProjectsForUser(any(User.class)))
-                .thenReturn(Optional.of(projects));
-
-        mockMvc.perform(get("/api/projects")
-                        .with(user(testUser)))
+        ProjectResponseDto p2 = new ProjectResponseDto();
+        p2.setProjectName("Another Project"); p2.setDescription("Second"); p2.setSessions(3); p2.setTasks(Collections.emptyList());
+        Collection<ProjectResponseDto> projects = List.of(projectResponse, p2);
+        when(projectServices.getAllProjectsForUser(any(User.class))).thenReturn(projects);
+        mockMvc.perform(get("/api/projects").with(user(testUser)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.message").value("Projects list retrieved successfully"))
                 .andExpect(jsonPath("$.data.length()").value(2));
     }
 
-    @Test
-    @WithMockUser
-    void getProjectsList_Empty_ReturnsNotFound() throws Exception {
-        when(projectServices.getAllProjectsForUser(any(User.class)))
-                .thenReturn(Optional.empty());
-
-        mockMvc.perform(get("/api/projects")
-                        .with(user(testUser)))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("No projects found for the user"));
-    }
-
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void getProjectsList_ServiceThrowsException_ReturnsInternalServerError() throws Exception {
         when(projectServices.getAllProjectsForUser(any(User.class)))
                 .thenThrow(new RuntimeException("DB error"));
-
-        mockMvc.perform(get("/api/projects")
-                        .with(user(testUser)))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$.success").value(false));
+        mockMvc.perform(get("/api/projects").with(user(testUser)))
+                .andExpect(status().isInternalServerError());
     }
 
     // ========== PUT /api/project/{id} ==========
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void updateProject_Success() throws Exception {
-        ProjectResponseDto updatedResponse = new ProjectResponseDto();
-        updatedResponse.setProjectName("Updated Project");
-        updatedResponse.setDescription("Updated description");
-        updatedResponse.setSessions(5);
-        updatedResponse.setTasks(Collections.emptyList());
-
+        ProjectResponseDto updated = new ProjectResponseDto();
+        updated.setProjectName("Updated Project"); updated.setDescription("Updated desc"); updated.setSessions(5); updated.setTasks(Collections.emptyList());
         when(projectServices.updateProject(eq(1L), any(ProjectRequestDto.class), any(User.class)))
-                .thenReturn(Optional.of(updatedResponse));
-
-        ProjectRequestDto updateRequest = new ProjectRequestDto();
-        updateRequest.setProjectName("Updated Project");
-        updateRequest.setDescription("Updated description");
-        updateRequest.setSessions(5);
-
-        mockMvc.perform(put("/api/project/1")
-                        .with(csrf())
-                        .with(user(testUser))
+                .thenReturn(updated);
+        ProjectRequestDto req = new ProjectRequestDto();
+        req.setProjectName("Updated Project"); req.setDescription("Updated desc"); req.setSessions(5);
+        mockMvc.perform(put("/api/project/1").with(csrf()).with(user(testUser))
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updateRequest)))
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.message").value("Project updated successfully"))
                 .andExpect(jsonPath("$.data.projectName").value("Updated Project"));
     }
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void updateProject_NotFound() throws Exception {
         when(projectServices.updateProject(eq(999L), any(ProjectRequestDto.class), any(User.class)))
-                .thenReturn(Optional.empty());
-
-        mockMvc.perform(put("/api/project/999")
-                        .with(csrf())
-                        .with(user(testUser))
+                .thenThrow(new ResourceNotFoundException("Project", 999L));
+        mockMvc.perform(put("/api/project/999").with(csrf()).with(user(testUser))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(projectRequest)))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Project not found or inaccessible"));
+                .andExpect(status().isNotFound());
     }
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void updateProject_ServiceThrowsException_ReturnsInternalServerError() throws Exception {
         when(projectServices.updateProject(eq(1L), any(ProjectRequestDto.class), any(User.class)))
                 .thenThrow(new RuntimeException("DB error"));
-
-        mockMvc.perform(put("/api/project/1")
-                        .with(csrf())
-                        .with(user(testUser))
+        mockMvc.perform(put("/api/project/1").with(csrf()).with(user(testUser))
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(projectRequest)))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$.success").value(false));
+                .andExpect(status().isInternalServerError());
     }
 
     // ========== DELETE /api/project/{id} ==========
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void deleteProject_Success() throws Exception {
-        when(projectServices.deleteProjectById(eq(1L), any(User.class)))
-                .thenReturn(true);
-
-        mockMvc.perform(delete("/api/project/1")
-                        .with(csrf())
-                        .with(user(testUser)))
-                .andExpect(status().isNoContent())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.message").value("Project deleted successfully"));
+        doNothing().when(projectServices).deleteProjectById(eq(1L), any(User.class));
+        mockMvc.perform(delete("/api/project/1").with(csrf()).with(user(testUser)))
+                .andExpect(status().isNoContent());
     }
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void deleteProject_NotFound() throws Exception {
-        when(projectServices.deleteProjectById(eq(999L), any(User.class)))
-                .thenReturn(false);
-
-        mockMvc.perform(delete("/api/project/999")
-                        .with(csrf())
-                        .with(user(testUser)))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value("Project not found or inaccessible"));
+        doThrow(new ResourceNotFoundException("Project", 999L))
+                .when(projectServices).deleteProjectById(eq(999L), any(User.class));
+        mockMvc.perform(delete("/api/project/999").with(csrf()).with(user(testUser)))
+                .andExpect(status().isNotFound());
     }
 
-    @Test
-    @WithMockUser
+    @Test @WithMockUser
     void deleteProject_ServiceThrowsException_ReturnsInternalServerError() throws Exception {
-        when(projectServices.deleteProjectById(eq(1L), any(User.class)))
-                .thenThrow(new RuntimeException("DB error"));
-
-        mockMvc.perform(delete("/api/project/1")
-                        .with(csrf())
-                        .with(user(testUser)))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$.success").value(false));
+        doThrow(new RuntimeException("DB error"))
+                .when(projectServices).deleteProjectById(eq(1L), any(User.class));
+        mockMvc.perform(delete("/api/project/1").with(csrf()).with(user(testUser)))
+                .andExpect(status().isInternalServerError());
     }
 
     // ========== Auth test ==========
 
     @Test
     void createNewProject_Unauthenticated_ReturnsUnauthorized() throws Exception {
-        mockMvc.perform(post("/api/project")
-                        .with(csrf())
+        mockMvc.perform(post("/api/project").with(csrf())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(projectRequest)))
                 .andExpect(status().isUnauthorized());
     }
 
-    @TestConfiguration
-    @EnableWebSecurity
+    @TestConfiguration @EnableWebSecurity
     static class TestSecurityConfig {
         @Bean
         public SecurityFilterChain testSecurityFilterChain(HttpSecurity http) throws Exception {
-            http
-                .csrf(AbstractHttpConfigurer::disable)
+            http.csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(auth -> auth.anyRequest().authenticated())
-                .exceptionHandling(ex -> ex
-                    .authenticationEntryPoint(
-                        (req, res, e) -> res.sendError(HttpServletResponse.SC_UNAUTHORIZED)
-                    )
-                );
+                .exceptionHandling(ex -> ex.authenticationEntryPoint(
+                    (req, res, e) -> res.sendError(HttpServletResponse.SC_UNAUTHORIZED)));
             return http.build();
         }
     }
